--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ table {
 }
 /* Zebra striping */
 tr:nth-of-type(odd) { 
-  background: #eee; 
+  background: #25a083; 
 }
 th { 
   background: #333; 
