--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ tr:nth-of-type(odd) {
   background: #25a083; 
 }
 th { 
-  background: #333; 
+  background: #f4e54; 
   color: white; 
   font-weight: bold; 
 }
