--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ tr:nth-of-type(odd) {
   background: #25a083; 
 }
 th { 
-  background: #f4e54; 
+  background: #333; 
   color: white; 
   font-weight: bold; 
 }
@@ -50,7 +50,7 @@ td, th {
 
 #type1:hover
 {
-	color:#036;
+	color:#4f4e54;
 
 }
 
