--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ td, th {
 
 #type1:hover
 {
-	color:#4f4e54;
+	color:#036;
 
 }
 
@@ -58,7 +58,7 @@ td, th {
 {
 	text-decoration:none;
 	margin-right:15px;
-	font-size:18px;
+	font-size:28px;
 	color:#03C;
 	font-weight:bold;
 	float:right;
