--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ td, th {
 		   font-weight:none;
 	   }
        </style>
-    </div>
+   //* </div>
     <div>
     <ul>
     <li><strong>NOTE</strong>
@@ -289,6 +289,6 @@ td, th {
     </ul>
     </li>
     </ul>
-    </div>
+    *//</div>
 </body>
 </html>
