--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@ td, th {
 		   font-weight:none;
 	   }
        </style>
-   //* </div>
+    
+</body>
+</div>
     <div>
     <ul>
     <li><strong>NOTE</strong>
@@ -289,6 +291,5 @@ td, th {
     </ul>
     </li>
     </ul>
-    *//</div>
-</body>
+    </div>
 </html>
