--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ td, th {
 <br />
 
 <hr>
-<div align="center"><p style="font-size:21px; font-family:'Times New Roman', Times, serif; font-weight:bold; text-decoration:underline;">Discipline-Wise Listing</p></div>
+<div align="center"><p style="font-size:21px; font-family:'calibry body', Times, serif; font-weight:bold; text-decoration:underline;">Discipline Wise Listing</p></div>
 
 <table width="100%">
 
@@ -277,9 +277,7 @@ td, th {
 		   font-weight:none;
 	   }
        </style>
-    
-</body>
-</div>
+    </div>
     <div>
     <ul>
     <li><strong>NOTE</strong>
@@ -292,4 +290,5 @@ td, th {
     </li>
     </ul>
     </div>
+</body>
 </html>
