--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ td, th {
 <br />
 
 <hr>
-<div align="center"><p style="font-size:21px; font-family:'Times New Roman', Times, serif; font-weight:bold; text-decoration:underline,italic;">Discipline Wise Listing</p></div>
+<div align="center"><p style="font-size:21px; font-family:'Times New Roman', Times, serif; font-weight:bold; text-decoration:underline;">Discipline Wise Listing</p></div>
 
 <table width="100%">
 
