--- a/basic_courses.html
+++ b/basic_courses.html
@@ -78,7 +78,7 @@ th {
 }
 td, th { 
   padding: 6px; 
-  border: 1px solid #c3cc; 
+  border: 1px solid #ccc; 
   text-align: left; 
 }
 
@@ -103,7 +103,7 @@ td, th {
 
 #type1:hover
 {
-	color:#036;
+	color:#01236;
 
 }
 
