--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 {
 	color:#0fa00;
 	text-decoration:none;
-	font-size:1em;
+	font-size:2em;
 }
 table { 
   width: 100%; 
@@ -84,7 +84,7 @@ td, th {
 
 <div>
 <div id="top">
-<div align="center"><img src="images/12345.jpg">
+<div align="center"><img src="images/12345.png">
 
 </div>
 <br />
