--- a/aids.html
+++ b/aids.html
@@ -69,7 +69,7 @@ table {
 }
 /* Zebra striping */
 tr:nth-of-type(odd) { 
-  background: #bce0bc; 
+  background: #eee; 
 }
 th { 
   background: #333; 
@@ -126,7 +126,6 @@ td, th {
 {
 	height:60px;
 	background-color:#FFF;
-	
 }
 
 </style>
@@ -137,9 +136,7 @@ td, th {
 
 <div>
 <div id="top">
-<div align:center;>
 <img src="images/12345.png">
-
 
 </div>
 <div id="top">
