--- a/mba.html
+++ b/mba.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Computer Science</title>
+<title>Computer Science Engineering</title>
 <script>
 function goToPage( id ) {
 
@@ -125,8 +125,7 @@ td, th {
 #top
 {
 	height:60px;
-	background-color:#FFF;
-	
+	background-color:#bce0bc;
 }
 
 </style>
@@ -136,10 +135,8 @@ td, th {
 <body>
 
 <div>
-<div id="top">
-<div align:center;>
+<div id="top"><div align="center">
 <img src="images/12345.png">
-
 
 </div>
 <div id="top">
