--- a/chem.html
+++ b/chem.html
@@ -125,8 +125,7 @@ td, th {
 #top
 {
 	height:60px;
-	background-color:#FFF;
-	
+	background-color:#bce0bc;
 }
 
 </style>
@@ -137,9 +136,7 @@ td, th {
 
 <div>
 <div id="top">
-<div align:center;>
-<img src="images/12345.png">
-
+<div align="center"><img src="images/12345.png">
 
 </div>
 <div id="top">
