--- a/eee.html
+++ b/eee.html
@@ -125,7 +125,9 @@ td, th {
 #top
 {
 	height:60px;
-	background-color:#FFF;
+	background-color:#bce0bc;
+	text-align: center; 
+	height:60px;
 	
 }
 
@@ -137,7 +139,6 @@ td, th {
 
 <div>
 <div id="top">
-<div align:center;>
 <img src="images/12345.png">
 
 
