--- a/maths.html
+++ b/maths.html
@@ -125,8 +125,7 @@ td, th {
 #top
 {
 	height:60px;
-	background-color:#FFF;
-	
+	background-color:#bce0bc;
 }
 
 </style>
@@ -136,10 +135,8 @@ td, th {
 <body>
 
 <div>
-<div id="top">
-<div align:center;>
+<div id="top"><div align="center">
 <img src="images/12345.png">
-
 
 </div>
 <div id="top">
