--- a/mech.html
+++ b/mech.html
@@ -125,8 +125,7 @@ td, th {
 #top
 {
 	height:60px;
-	background-color:#FFF;
-	
+	background-color:#bce0bc;
 }
 
 </style>
@@ -137,7 +136,7 @@ td, th {
 
 <div>
 <div id="top">
-<div align:center;>
+<div align="center">
 <img src="images/12345.png">
 
 
