--- a/maths/mac/mac-links.html
+++ b/maths/mac/mac-links.html
@@ -486,17 +486,17 @@ td, th {
 	<td><strong>A8001</strong></td>
 	<td><strong>MAC</strong></td>
 	<td><strong>Introduction of Matrices and Rank of a Matrix</strong></td>
-	<td><strong>Mr B.Chandrasekhar  </strong></td>
+	<td><strong>Mr B.Chandrasekhar</strong></td>
 	<td><strong>Video</strong></td>
 	<td><strong><a href="https://youtu.be/0F6TwY4VBQQ" >Click for Video</strong></td>
 	
 	<tr>
 	<td><strong>A8001</strong></td>
 	<td><strong>MAC</strong></td>
-	<td><strong>MAC</strong></td>
-	<td><strong></strong></td>
+	<td><strong>Inverse of a Matrix</strong></td>
+	<td><strong>Mr B.Chandrasekhar</strong></td>
 	<td><strong>video</strong></td>
-	<td><strong><a href="" >Click for Video</strong></td></strong></td>
+	<td><strong><a href="https://youtu.be/-StPf9sKAUg" >Click for Video</strong></td></strong></td>
 	
       
      
