--- a/chemistry/chemistry-links.html
+++ b/chemistry/chemistry-links.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>ODVC LECTURES</title>
+<title>CHEMISTRY LECTURES</title>
 <script>
 function goToPage( id ) {
 
@@ -139,7 +139,7 @@ td, th {
 
 <div>
 <div id="top">
-<img src="../../images/12345.png">
+<img src="../images/12345.png">
 
 
 </div>
@@ -159,22 +159,22 @@ td, th {
 	</tr>
 	<tr>
 	<td><strong>A8002</strong></td>
-	<td><strong>ODEVC</strong></td>
-	<td><strong>Change of Scale Property</strong></td>
-	<td><strong>Dr K.Mamatha</strong></td>
+	<td><strong>Chemistry</strong></td>
+	<td><strong>Properties of Graphene and its application</strong></td>
+	<td><strong>Dr G.Ramesh</strong></td>
 	<td><strong>Video</strong></td>
-	<td><strong><a href="https://youtu.be/YNyuSjgUuS4">Click for Video</a></td></strong></td></tr>
+	<td><strong><a href="https://youtu.be/zzuYkw2uRec">Click for Video</a></td></strong></td></tr>
 	
 
 
 	
 	<tr>
 	<td><strong>A8002</strong></td>
-	<td><strong>ODEVC</strong></td>
-	<td><strong> Introduction of Laplase Transform</strong></td>
-	<td><strong>Dr K.mamatha</strong></td>
+	<td><strong>Chemistry</strong></td>
+	<td><strong>Portland Cement</strong></td>
+	<td><strong>Dr G.Ramesh</strong></td>
 	<td><strong>Video</strong></td>
-	<td><strong><a href="https://youtu.be/k3_K4XiSuhU">Click for Video</strong></td>
+	<td><strong><a href="https://youtu.be/ih-NrLIB37Y">Click for Video</strong></td>
 	
       
       
