--- a/maths/odevc/chemistry-sub.html
+++ b/maths/odevc/chemistry-sub.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>VARDHAMAN COLLEGE OF ENGG - VIDEO LECTURES</title>
+<title>CHEMISTRY LECTURES</title>
 <head>
 <style>
 #linked
@@ -98,13 +98,15 @@ td, th {
 
   <tr>
 
-    <td> <div align="center"><a href="maths/odevc/odevc-links.html" id="linked">ODEVC</a></td>
+    <td> <div align="center"><a href="maths/odevc/odevc-links.html" id="linked">POLYMERS</a></td>
 
-    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">MAC</a></td>
+    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">ENGINEERING MATERIALS</a></td>
 
-    <td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">COSM</a></td>
+    <td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">ENERGY SOURCES</a></td>
 
-    	<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">NMCV</a></td>
+    	<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">WATER AND ITS TREATEMENT</a></td>
+		
+		<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">BATTRIES AND CORROSION</a></td>
 
   </tr>
   <table width="1000" align="center" style="border:none;margin-bottom:5px">
@@ -130,13 +132,13 @@ td, th {
 
     
 
-    <td><div align="center"><a href="aiml.html" id="linked"></a></td>
+    <td><div align="center"><a href="" id="linked"></a></td>
 
-    <td><div align="center"><a href="cseds.html" id="linked"></a></td>
+    <td><div align="center"><a href="" id="linked"></a></td>
 
-    <td><div align="center"><a href="aids.html" id="linked"></a></td>
+    <td><div align="center"><a href="" id="linked"></a></td>
 
-    <td><div align="center"><a href="eee.html" id="linked"></a></td>
+    <td><div align="center"><a href="" id="linked"></a></td>
 
   </tr>
 
