--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ td, th {
 
     <td><div align="center"><a href="mba.html" id="linked" >M B A</a></td>
 
-     <td><div align="center"><a href="chem.html" id="linked" >CHEMISTRY </a></td>
+     <td><div align="center"><a href="chemistry-sub.html" id="linked" >CHEMISTRY</a></td>
 
   </tr>
 
@@ -142,7 +142,7 @@ td, th {
 
     <td><div align="center"><a href="eng.html" id="linked" >ENGLISH</a></td>
 
-    <td><div align="center"><a href="maths-sub.html" id="linked" >MATHEMATICS</a></td>
+    <td><div align="center"><a href="rec-site/maths-sub/maths-sub.html"id="linked">MATHEMATICS</a></td>
 
     <td><div align="center"><a href="physics.html" id="linked" >PHYSICS</a></td>
 
@@ -203,7 +203,7 @@ td, th {
 
     <td><div align="center"><a href="physics.html" id="linked"></a></td>
 
-     <td><div align="center"><a href="mths.html" id="linked"></a></td>
+     <td><div align="center"><a href="maths.html" id="linked"></a></td>
 
   </tr>
     <tr>
