--- a/chemistry/ENGINEERING MATERIALS/materials-links.html
+++ b/chemistry/ENGINEERING MATERIALS/materials-links.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CHEMISTRY LECTURES</title>
+<title>LECTURES</title>
 <script>
 function goToPage( id ) {
 
@@ -158,23 +158,23 @@ td, th {
 <th></th>
 	</tr>
 	<tr>
-	<td><strong>001</strong></td>
-	<td><strong>BATTRIES AND CORISSION</strong></td>
-	<td><strong></strong></td>
-	<td><strong></strong></td>
+	<td><strong>A8008</strong></td>
+	<td><strong>Engineering Materials</strong></td>
+	<td><strong>Portland Cement</strong></td>
+	<td><strong>Dr G.Ramesh</strong></td>
 	<td><strong>Video</strong></td>
-	<td><strong><a href="">Click for Video</a></td></strong></td></tr>
+	<td><strong><a href="https://youtu.be/ih-NrLIB37Y">Click for Video</a></td></strong></td></tr>
 	
 
 
 	
 	<tr>
-	<td><strong></strong></td>
-	<td><strong></strong></td>
-	<td><strong></strong></td>
-	<td><strong></strong></td>
+	<td><strong>A8008</strong></td>
+	<td><strong>Engineering Materials</strong></td>
+	<td><strong>Graphene</strong></td>
+	<td><strong>Dr G.Ramesh</strong></td>
 	<td><strong>Video</strong></td>
-	<td><strong><a href="">Click for Video</strong></td>
+	<td><strong><a href="https://youtu.be/zzuYkw2uRec">Click for Video</strong></td>
 	
       
       
