--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ td, th {
 
     <td><div align="center"><a href="eng.html" id="linked" >ENGLISH</a></td>
 
-    <td><div align="center"><a href="rec-site/maths-sub/maths-sub.html"id="linked">MATHEMATICS</a></td>
+    <td><div align="center"><a href="maths-sub.html"id="linked">MATHEMATICS</a></td>
 
     <td><div align="center"><a href="physics.html" id="linked" >PHYSICS</a></td>
 
