--- a/chemistry/POLYMERS/polymers-links.html
+++ b/chemistry/POLYMERS/polymers-links.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CHEMISTRY LECTURES</title>
+<title>LECTURES</title>
 <script>
 function goToPage( id ) {
 
@@ -158,8 +158,8 @@ td, th {
 <th></th>
 	</tr>
 	<tr>
-	<td><strong>001</strong></td>
-	<td><strong>BATTRIES AND CORISSION</strong></td>
+	<td><strong></strong></td>
+	<td><strong></strong></td>
 	<td><strong></strong></td>
 	<td><strong></strong></td>
 	<td><strong>Video</strong></td>
