--- a/chemistry-sub.html
+++ b/chemistry-sub.html
@@ -98,7 +98,7 @@ td, th {
 
   <tr>
 
-    <td> <div align="center"><a href="maths/odevc/odevc-links.html" id="linked">BATTRIES AND CORISSION</a></td>
+    <td> <div align="center"><a href="chemistry/battries and corision/battery-links.html" id="linked">BATTRIES AND CORISSION</a></td>
 
     <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">WATER AND ITS TREATMENT</a></td>
 
