--- a/chemistry-sub.html
+++ b/chemistry-sub.html
@@ -100,13 +100,13 @@ td, th {
 
     <td> <div align="center"><a href="chemistry/battries and corision/battery-links.html" id="linked">BATTRIES AND CORISSION</a></td>
 
-    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">WATER AND ITS TREATMENT</a></td>
+    <td><div align="center"><a href="" id="linked">WATER AND ITS TREATMENT</a></td>
 
-    <td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">POLYMERS</a></td>
+    <td><div align="center"><a href="" id="linked">POLYMERS</a></td>
 
-    	<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">ENERGY SOURCES</a></td>
+    	<td><div align="center"><a href="" id="linked">ENERGY SOURCES</a></td>
 		
-		<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">ENGINEERING MATERIALS</a></td>
+		<td><div align="center"><a href="" id="linked">ENGINEERING MATERIALS</a></td>
 
   </tr>
   <table width="1000" align="center" style="border:none;margin-bottom:5px">
@@ -303,6 +303,8 @@ td, th {
 	   ul li{
 		   font-size:17px;
 		   font-weight:none;
+		   list-style-type: none;
+
 	   }
        </style>
     </div>
