--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ td, th {
 <br />
 
 <hr>
-<div align="center"><p style="font-size:22px;color:#F00; font-family:calibri; font-weight:bold; text-decoration:underlined;">Discipline Wise Listing</p></div>
+<div align="center"><p style="font-size:22px;color:#F00; font-family:calibri; font-weight:bold; text-decoration:underlined;">Departments</p></div>
 
 <table width="100%">
 
