--- a/maths-sub.html
+++ b/maths-sub.html
@@ -92,19 +92,26 @@ td, th {
 <br />
 <br />
 <hr>
-<div align="center"><p style="font-size:22px;color:#F00; font:calibri; font-weight:bold; text-decoration:underlined;">Toptc-wise Listing</p></div>
+<div align="center"><p style="font-size:22px;color:#F00; font:calibri; font-weight:bold; text-decoration:underlined;">List of Courses</p></div>
 
 <table width="100%">
 
   <tr>
 
-    <td> <div align="center"><a href="maths/odevc/odevc-links.html" id="linked">ODEVC</a></td>
+    
 
-    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">MAC</a></td>
+    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">MAC - A8001</a></td>
+	
+	<td> <div align="center"><a href="maths/odevc/odevc-links.html" id="linked">ODEVC - A8002</a></td>
+	
+	<td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">PDS - A8003</a></td>
+	
+	<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">NMCV - A8004</a></td>
 
-    <td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">COSM</a></td>
 
-    	<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">NMCV</a></td>
+    <td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">COSM - A8005</a></td>
+
+    	<
 
   </tr>
   <table width="1000" align="center" style="border:none;margin-bottom:5px">
