--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ td, th {
 
     <td><div align="center"><a href="aids.html" id="linked" >A I D S</a></td>
 
-    <td><div align="center"><a href="eee.html" id="linked" >E E E</a></td>s
+    <td><div align="center"><a href="eee.html" id="linked" >E E E</a></td>
 
   </tr>
 
