--- a/maths-sub.html
+++ b/maths-sub.html
@@ -100,7 +100,7 @@ td, th {
 
     
 
-    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">MAC - A8001</a></td>
+    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">Matrices and Calculus - A8001</a></td>
 	
 	<td> <div align="center"><a href="maths/odevc/odevc-links.html" id="linked">ODEVC - A8002</a></td>
 	
