--- a/maths-sub.html
+++ b/maths-sub.html
@@ -99,17 +99,18 @@ td, th {
   <tr>
 
     
+<tr>
+    <td><div align="left"><a href="maths/mac/mac-links.html" id="linked">1. A8001 - Matrices and Calculus </a></td>
+	</tr><tr>
+	<td> <div align="left"><a href="maths/odevc/odevc-links.html" id="linked">2. A8002 - Ordinary Differential Equations and Vector Calculus</a></td>
+	</tr><tr>
+	<td><div align="left"><a href="maths/cosm/cosm-links.html" id="linked">3. A8003 - Probability Distributions and Statistics</a></td>
+	</tr><tr>
+	<td><div align="left"><a href="maths/nmcv/nmcv-links.html" id="linked">4. A8004 - Numerical Methods and Complex Variables </a></td>
+	</tr>
 
-    <td><div align="center"><a href="maths/mac/mac-links.html" id="linked">Matrices and Calculus - A8001</a></td>
-	
-	<td> <div align="center"><a href="maths/odevc/odevc-links.html" id="linked">ODEVC - A8002</a></td>
-	
-	<td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">PDS - A8003</a></td>
-	
-	<td><div align="center"><a href="maths/nmcv/nmcv-links.html" id="linked">NMCV - A8004</a></td>
 
-
-    <td><div align="center"><a href="maths/cosm/cosm-links.html" id="linked">COSM - A8005</a></td>
+    <td><div align="left"><a href="maths/cosm/cosm-links.html" id="linked">5. A8005 - Computer Oriented Statistical Methods</a></td>
 
     	
 
