--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ td, th {
 	   ul li{
 		   font-size:17px;
 		   font-weight:none;
+		   text-decoration:none;
 	   }
        </style>
     </div>
