--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ td, th {
 <br />
 
 <hr>
-<div align="center"><p style="font-size:22px;color:#F00; font-family:calibri; font-weight:bold; text-decoration:underlined;">Departments</p></div>
+<div align="center"><p style="font-size:22px;color:#F00; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Department for Video Lectures</p></div>
 
 <table width="100%">
 
@@ -157,9 +157,10 @@ td, th {
 				<th class="menu top"><div align="center">OUR VISION</th><th><div align="center">OUR MISSION</th>
 			</tr>
 			<tr>
-				<td style="text-align:justify;padding-left:8px;padding-right:8px; font: 19px Verdana, Georgia, 'Times New Roman', Times, sans-serif; line-height:1.7">To aim at inculcating the spirit of high ambitions, healthy attitudes, discipline and multidimensional excellence in the students and strive to mould them to scale new heights and get their mental horizons enlarged through value-based technical education and congenial study environment.
+				<td style="text-align:justify;padding-left:8px;padding-right:8px; font: 19px Verdana, Georgia, 'Times New Roman', Times, sans-serif; line-height:1.7">To be a pioneer institute and leader in engineering education to address societal needs through education and practice.
 				</td>
-				<td style="text-align:justify;padding-left:8px;padding-right:8px; font: 19px Verdana, Georgia, 'Times New Roman', Times, sans-serif; line-height:1.7">To sharpen the inherent professional skills of our students to enable them compete in the complex world through our newly evolved quality management system and dedicated staff. The practical oriented education and the research tie-up with industries we provide, tend to promote the intellectual pursuits of the students.
+				<td style="text-align:justify;padding-left:8px;padding-right:8px; font: 19px Verdana, Georgia, 'Times New Roman', Times, sans-serif; line-height:1.7">To adopt innovative student centric learning methods.To enhance professional and entrepreneurial skills through industry institute interaction.To train the students to meet the dynamic needs of society.To promote research and continuing education.
+
 				</td>
 			</tr>
 		</table>		
@@ -241,15 +242,14 @@ td, th {
 
 <li><strong>N O T E :</strong>
     <ul>
+	<ul style="list-style-type: none;">
      <li></li>
     <li>This index has been provided to refer the VARDHAMAN ONLINE VIDEO COURSE CONTENTS.</li>
     <li>Click on the Discipline to view list of courses</li>
     <li>The index list may be modified by the institute, as required.</li>
 
 
-   <style>ul{
-	   
-	   font-family:"Times New Roman", Times, serif;
+   <style>ul{font-family:"Times New Roman", Times, serif;
 	   }
 	   ul li{
 		   font-size:17px;
