--- a/maths-sub.html
+++ b/maths-sub.html
@@ -92,7 +92,7 @@ td, th {
 <br />
 <br />
 <hr>
-<div align="center"><p style="font-size:22px;color:#F00; font:calibri; font-weight:bold; text-decoration:underlined;">List of Courses</p></div>
+<div align="center"><p style="font-size:22px;color:#F00; font:calibri; font-weight:bold; text-decoration:underlined;">Click on Course for Video Lectures</p></div>
 
 <table width="100%">
 
