--- a/maths/nmcv/nmcv-links.html
+++ b/maths/nmcv/nmcv-links.html
@@ -24,27 +24,28 @@ function goToPage( id ) {
 </script>
 <style>
 #select1
+
 {
 	
 	
 	color:rgb(0,0,0);
 	font-family:"Times New Roman", Times, serif;
 	width:100px;
-	
 	cursor:pointer;
 	font-weight:bold;
 	
 	
 
 }
+
 #select2
+
 {
 	
 	
 	color:rgb(0,0,0);
 	font-family:"Times New Roman", Times, serif;
 	width:100px;
-	
 	cursor:pointer;
 	font-weight:bold;
 	
@@ -58,7 +59,6 @@ function goToPage( id ) {
 	color:rgb(0,0,0);
 	font-family:"Times New Roman", Times, serif;
 	width:100px;
-	
 	cursor:pointer;
 	font-weight:bold;
 	
@@ -72,14 +72,14 @@ tr:nth-of-type(odd) {
   background: #bce0bc; 
 }
 th { 
-  background: #333; 
+  background: #1b2b26; 
   color: #ff5733; 
   font-weight: bold; 
 }
 td, th { 
   padding: 6px; 
   border: 1px solid #ccc; 
-  text-align: left; 
+  text-align: center; 
 }
 
 
@@ -147,10 +147,9 @@ td, th {
 
 </div>
 <table width="100%">
+
 <th class="menu top"><div align="center"></th><th><div align="center">MODULE - I</th>
-	<th></th>
-<table width="100%">
-	<tr style="text-align:center;">
+
 
 <table width="100%">
 	<tr style="text-align:center;">
