--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -232,7 +232,7 @@ td, th {
 
 </table>
 
-<h3>Click here for PDF link</h3>
+<h3 style="color: blue;">Click to Download Module-I Lecture Notes</h3>
         <button id="downloadBtn">Download PDF</button>
 
     <script>
@@ -327,7 +327,7 @@ td, th {
 </tr>
 </table>	
 <br>
-<h3>Click here for PDF link</h3>
+<h3 style="color: blue;">Click to Download Module-II Lecture Notes</h3>
         <button id="downloadBtn">Download PDF</button>
 
     <script>
@@ -420,7 +420,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=70
 " >Click for Video</strong></a></td>
 </tr>
 </table>
-<h3>Click here for PDF link</h3>
+<h3 style="color: blue;">Click to Download Module-III Lecture Notes</h3>
         <button id="downloadBtn">Download PDF</button>
 
     <script>
@@ -521,7 +521,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=47
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=48
 " >Click for Video</strong></td>
 </table>
-<h3>Click here for PDF link</h3>
+<h3 style="color: blue;">Click to Download Module-IV Lecture Notes</h3>
         <button id="downloadBtn">Download PDF</button>
 
     <script>
@@ -627,7 +627,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=30
 " >Click for Video</strong></td></strong></td>
 </table>
 <br>
-<h3>Click here for PDF link</h3>
+<h3 style="color: blue;">Click to Download Module-V Lecture Notes</h3>
         <button id="downloadBtn">Download PDF</button>
 
     <script>
