--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -238,7 +238,7 @@ td, th {
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=0SGTo9'; 
+            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EaoeASPkby1Br8UllBoLZnAB0CBMTrOymZQApLQkE_FncQ?e=E2lifl'; 
             link.download = 'Lecture Notes';
             document.body.appendChild(link);
             link.click();
@@ -333,7 +333,7 @@ td, th {
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-			link.href = ''
+			link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/ERYXIJtVXxREiU2p5_Cngd8BZVObrMJ5LNjjz6YQ7a9Slg?e=tolGlc'
 			link.download = 'Lecture Notes';
             document.body.appendChild(link);
             link.click();
@@ -426,7 +426,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=70
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=0SGTo9'; 
+            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EY4jUS6_euJEhCeZ0i5RhBgB6pEhHKu9OThMKOHMvnNp3Q?e=sezeUf'; 
             link.download = 'Lecture Notes';
             document.body.appendChild(link);
             link.click();
@@ -527,7 +527,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=48
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=0SGTo9'; 
+            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EcgNo_jqfk9KnMlPes0WSWsBbICzZt72EK_pzcyPL45vQw?e=gV9GXJ'; 
             link.download = 'Lecture Notes';
             document.body.appendChild(link);
             link.click();
@@ -633,7 +633,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=30
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=0SGTo9'; 
+            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EXZ4_8vreZZGkhwSgI4BSTcB___nKRRhxZR4CRHZv-3fCA?e=8gaElM'; 
             link.download = 'Lecture Notes';
             document.body.appendChild(link);
             link.click();
