--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -90,7 +90,12 @@ td, th {
 
     
 }
-
+.menu top1{
+background:#1b2b26; 
+  color: #ff5733; 
+  font-weight: bold;
+  height: 30px;
+}
 
 
 #type1
@@ -157,12 +162,12 @@ td, th {
 </tr>
 </table>
 <table width="100%">
-<tr style="text-align:center;">
+<tr class="menu top1"; style="text-align:center;">
 		
-		<th><font style="color: white;"><p style="font-size: 1.5em;">Lecture No</th>
-		<th><font style="color: white;"><p style="font-size: 1.5em;">Name of the Topic</th>
-		<th><font style="color: white;"><p style="font-size: 1.5em;">Lecture By</th>
-		<th><font style="color: white;"><p style="font-size: 1.5em;">Video Links</th>
+		<th class="menu top1";><font style="color: white;"><p style="font-size: 1.5em;">Lecture No</th>
+		<th class="menu top1";><font style="color: white;"><p style="font-size: 1.5em;">Name of the Topic</th>
+		<th class="menu top1";><font style="color: white;"><p style="font-size: 1.5em;">Lecture By</th>
+		<th class="menu top1";><font style="color: white;"><p style="font-size: 1.5em;">Video Links</th>
 		</tr>
 	
 	
@@ -238,7 +243,7 @@ td, th {
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EaoeASPkby1Br8UllBoLZnAB0CBMTrOymZQApLQkE_FncQ?e=E2lifl'; 
+            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EaoeASPkby1Br8UllBoLZnAB0CBMTrOymZQApLQkE_FncQ?e=h7KsKE'; 
             link.download = 'Lecture Notes';
             document.body.appendChild(link);
             link.click();
@@ -333,8 +338,8 @@ td, th {
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-			link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/ERYXIJtVXxREiU2p5_Cngd8BZVObrMJ5LNjjz6YQ7a9Slg?e=tolGlc'
-			link.download = 'Lecture Notes';
+			link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=2kD1Tk'
+			link.download = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcB4h2kt_mzRnVKPuOjsBvFMg?e=HA5C8L';
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
