--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -243,7 +243,7 @@ background:#1b2b26;
     <script>
         document.getElementById('downloadBtn').addEventListener('click', function() {
             const link = document.createElement('a');
-            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EaoeASPkby1Br8UllBoLZnAB0CBMTrOymZQApLQkE_FncQ?e=h7KsKE'; 
+            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=1mK4sn'; 
             link.download = 'Lecture Notes';
             document.body.appendChild(link);
             link.click();
