--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -192,7 +192,7 @@ background:#1b2b26;
 	<td><strong>3</strong></td>
 	<td><strong><div align="left">Baye’s theorem</strong></td>
 	<td><strong><div align="left">Dr M Varalakshmi</strong></td>
-	<td><strong><a href="https://youtu.be/azU-2dB5nLK?si=IBwobzOLMxjgwYH3">Click for Video</strong></td>
+	<td><strong><a href="https://youtu.be/azU-2dB5nLk">Click for Video</strong></td>
 	</tr>
 	
 	
@@ -236,19 +236,9 @@ background:#1b2b26;
 	</tr>
 
 </table>
-
-<h3 style="color: blue;">Click to Download Module-I Lecture Notes</h3>
-        <button id="downloadBtn">Download PDF</button>
-
-    <script>
-        document.getElementById('downloadBtn').addEventListener('click', function() {
-            const link = document.createElement('a');
-            link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=1mK4sn'; 
-            link.download = 'Lecture Notes';
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-        });</script>
+        
+  <td><strong><a href="https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EaoeASPkby1Br8UllBoLZnABrCSEjDeBktNn_w7KUY-j2g?e=VJpaZb">Click to Download Module-I Lecture Notes</a></strong></td>
+        
 <br/>
 
 <table width="100%">
@@ -333,10 +323,10 @@ background:#1b2b26;
 </table>	
 <br>
 <h3 style="color: blue;">Click to Download Module-II Lecture Notes</h3>
-        <button id="downloadBtn">Download PDF</button>
+        <button id="downloadBtn1">Download PDF</button>
 
     <script>
-        document.getElementById('downloadBtn').addEventListener('click', function() {
+        document.getElementById('downloadBtn1').addEventListener('click', function() {
             const link = document.createElement('a');
 			link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcBH698-6_FAwYlkTiLiPEpHA?e=2kD1Tk'
 			link.download = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/Ebdn_XGxfTNEpYbDf5m7DEcB4h2kt_mzRnVKPuOjsBvFMg?e=HA5C8L';
@@ -426,10 +416,10 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=70
 </tr>
 </table>
 <h3 style="color: blue;">Click to Download Module-III Lecture Notes</h3>
-        <button id="downloadBtn">Download PDF</button>
+        <button id="downloadBtn2">Download PDF</button>
 
     <script>
-        document.getElementById('downloadBtn').addEventListener('click', function() {
+        document.getElementById('downloadBtn2').addEventListener('click', function() {
             const link = document.createElement('a');
             link.href = 'https://vardhamancoe-my.sharepoint.com/:b:/g/personal/recordedsessions_vardhaman_org/EY4jUS6_euJEhCeZ0i5RhBgB6pEhHKu9OThMKOHMvnNp3Q?e=sezeUf'; 
             link.download = 'Lecture Notes';
