--- a/maths/nmcv/nmcv-links.html
+++ b/maths/nmcv/nmcv-links.html
@@ -185,7 +185,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=58
 	<tr>
 	<td><strong>3</strong></td>
 	<td><strong>Solution of Algebraic and Transcendental Equation (Newton Raphson Method)</strong></td>
-	<td><strong>Mr Narendra</strong></td>
+	<td><strong>Mr V.Narender</strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=JAluXTQ5b2Y&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=68
 ">Click for Video</strong></td>
@@ -194,7 +194,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=68
 	<tr>
 	<td><strong>4</strong></td>
 	<td><strong>Regula Falsi Method</strong></td>
-	<td><strong>Mr Narendra</strong></td>
+	<td><strong>Mr V.Narender</strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=gOpyOTsWyrE&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=43
 ">Click for Video</strong></td>
@@ -204,7 +204,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=43
 	<tr>
 	<td><strong>5</strong></td>
 	<td><strong>Jacobi Iteration Method</strong></td>
-	<td><strong>Mr Narendra</strong></td>
+	<td><strong>Mr V.Narender</strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=kEZs-EmDs3M&list=PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=4">Click for Video</strong></td>
 	
 
@@ -212,7 +212,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=43
 	<tr>
 	<td><strong>6</strong></td>
 	<td><strong>Gauss Seidel Iteration Method</strong></td>
-	<td><strong>Mr Narendra</strong></td>
+	<td><strong>Mr V.Narender</strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=Zb2DbKbxYOU&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=3
 ">Click for Video</strong></td>
@@ -220,7 +220,7 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=3
 	<tr>
 	<td><strong>7</strong></td>
 	<td><strong>Interpolation Finite Differences</strong></td>
-	<td><strong>Mr Narendra</strong></td>
+	<td><strong>Mr V.Narender</strong></td>
 	<td><strong><a href="https://www.youtube.com/watch?v=JbKg9d0OAuY&list=
 PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=7
 ">Click for Video</strong></td>
