--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -159,6 +159,10 @@ td {
 </div>
 
 <table width="100%">
+<tr>
+	<th class="menu top"; colspan=4 style="color: #ffffff;">COMPUTER ORIENTED STATISTICAL METHODS - A8005</th>
+</tr>
+<table width="100%">
 	<tr>
 	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
 </tr>
@@ -251,7 +255,6 @@ td {
 	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - II</th>
 </tr>
 </table>
-
 
 <table width="100%">
 <tr>
