--- a/maths/nmcv/nmcv-links.html
+++ b/maths/nmcv/nmcv-links.html
@@ -24,28 +24,27 @@ function goToPage( id ) {
 </script>
 <style>
 #select1
-
 {
 	
 	
 	color:rgb(0,0,0);
 	font-family:"Times New Roman", Times, serif;
 	width:100px;
+	
 	cursor:pointer;
 	font-weight:bold;
 	
 	
 
 }
-
 #select2
-
 {
 	
 	
 	color:rgb(0,0,0);
 	font-family:"Times New Roman", Times, serif;
 	width:100px;
+	
 	cursor:pointer;
 	font-weight:bold;
 	
@@ -59,6 +58,7 @@ function goToPage( id ) {
 	color:rgb(0,0,0);
 	font-family:"Times New Roman", Times, serif;
 	width:100px;
+	
 	cursor:pointer;
 	font-weight:bold;
 	
@@ -69,19 +69,35 @@ table {
 }
 /* Zebra striping */
 tr:nth-of-type(odd) { 
-  background: #bce0bc; 
+  background: #bce0bc;
+ 
 }
 th { 
-  background: #1b2b26; 
+  background:#1b2b26; 
   color: #ff5733; 
-  font-weight: bold; 
-}
-td, th { 
-  padding: 6px; 
+  font-weight: bold;
+  height: 40px;
   border: 1px solid #ccc; 
-  text-align: center; 
+  text-align: center;
+  font-size: 1.5em;
+  color: white;
+   
+          
 }
 
+td { 
+  padding: 6px; 
+  border: 1px solid #ccc; 
+  text-align: center;
+
+    
+}
+.menu top{
+ background:#1b2b26; 
+  color: #ff5733;
+  font-weight: bold;
+  height: 30px;
+}
 
 
 #type1
@@ -94,17 +110,12 @@ td, th {
 	
 	cursor:pointer;
 	font-weight:bold;
-	
-	
-	
-	
 
 }
 
 #type1:hover
 {
 	color:#036;
-
 }
 
 #courselink
@@ -147,16 +158,18 @@ td, th {
 
 </div>
 <table width="100%">
-
-<th class="menu top"><div align="center"></th><th><div align="center">MODULE - I</th>
-
-
+	<tr>
+	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
+</tr>
+</table>
 <table width="100%">
-	<tr style="text-align:center;">
-		<th>Lecture No</th>
-		<th>Name of the Topic</th>
-		<th>Lecture By</th>
-		<th>Video Links</th>
+<tr  style="text-align:center;">
+		
+		<th width="15%" >Lecture No</th>
+		<th width="40%" >Name of the Topic</th>
+		<th width="20%">Lecture By</th>
+		<th width="15%">Video Links</th>
+		</tr>
 
 	</tr>
 	<tr>
@@ -253,13 +266,19 @@ PLTfL8BuLfmuivof7011efsT4Th3YBZBo0&index=15
 ">Click for Video</strong></td></strong></td>
 </tr>
 <table width="100%">
-	
-	
-	<th class="menu top"><div align="center"></th><th><div align="center">MODULE - II
-	</th>
-	<th></th>
+	<tr>
+	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
+</tr>
+</table>
 <table width="100%">
-	<tr style="text-align:center;">
+<tr  style="text-align:center;">
+		
+		<th width="15%" >Lecture No</th>
+		<th width="40%" >Name of the Topic</th>
+		<th width="20%">Lecture By</th>
+		<th width="15%">Video Links</th>
+		</tr>
+
 	<tr>
 	<td><strong>11</strong></td>
 	<td><strong>Newton’s Cotes Quadrature formula</strong></td>
