--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -196,7 +196,7 @@ td {
  
 	<tr>
 	<td ><strong>3</strong></td>
-	<td ><strong><div align="left">Baye’s theorem<</div></strong></td>
+	<td ><strong><div align="left">Baye’s theorem</div></strong></td>
 	<td ><strong><div align="left">Dr M Varalakshmi</div></strong></td>
 	<td ><strong><a href="https://youtu.be/azU-2dB5nLk">Click for Video</a></strong></td>
 	</tr>
