--- a/maths/cosm/cosm-links.html
+++ b/maths/cosm/cosm-links.html
@@ -160,7 +160,7 @@ td {
 
 <table width="100%">
 <tr>
-	<th class="menu top"; colspan=4 style="color: #ffffff;">COMPUTER ORIENTED STATISTICAL METHODS - A8005</th>
+	<th class="menu top"; colspan=4 style="color: #ffffff;">A8005 - COMPUTER ORIENTED STATISTICAL METHODS</th>
 </tr>
 <table width="100%">
 	<tr>
