--- a/maths/pds/pds-links.html
+++ b/maths/pds/pds-links.html
@@ -159,7 +159,10 @@ td {
 </div>
 <table width="100%">
 	<tr>
+	<th class="menu top"; colspan=4 style="color: #ffffff;">A8003 - PROBABILITY DISTRIBUTIONS AND STATISTICS</th>
+	<tr>
 	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
+	</tr>
 </tr>
 </table>
 <table width="100%">
