--- a/maths/mac/mac-links.html
+++ b/maths/mac/mac-links.html
@@ -160,7 +160,9 @@ td {
 
 <table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
+	<th class="menu top"; colspan=4 style="color: #ffffff;">A8001 - MATRICES AND CALICULUS</th>
+</tr><tr>
+<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
 </tr>
 </table>
 <table width="100%">
