--- a/maths/odevc/odevc-links.html
+++ b/maths/odevc/odevc-links.html
@@ -160,7 +160,10 @@ td {
 
 			<table width="100%">
 	<tr>
-	<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
+	<th class="menu top"; colspan=4 style="color: #ffffff;">A8002 - ORDINARY DIFFERENTIAL EQUATIONS AND VECTOR CALCULUS</th>
+</tr>
+<tr>
+<th class="menu top"; colspan=4 style="color: #ff5733;"> MODULE - I</th>
 </tr>
 </table>
 <table width="100%">
